Fix diff dark mode colors

--- a/webprotege-client/src/main/java/edu/stanford/bmir/protege/web/client/diff/diff.css
+++ b/webprotege-client/src/main/java/edu/stanford/bmir/protege/web/client/diff/diff.css
@@ -9,7 +9,7 @@
 }
 
 .add {
-    background-color: mintcream;
+    background-color: literal("var(--create--background-color)");
     padding: 4px;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .remove {
-    background-color: #fff5fa;
+    background-color: literal("var(--delete--background-color)");
     padding: 4px;
 }
 
