--- a/webprotege-server/src/main/webapp/css/WebProtege.css
+++ b/webprotege-server/src/main/webapp/css/WebProtege.css
@@ -87,7 +87,9 @@
     --warning--border-color:                        #ffe884;
 
     --create--color:                           #00A60E;
+    --create--background-color:                 mintcream;
     --delete--color:                           #d10c00;
+    --delete--background-color:                #fff5fa;
 }
 
 
@@ -164,6 +166,12 @@ There's going to be something in Media Queries Level 5, but that is some way off
         --warning--color:                               #ffe205;
         --warning--background-color:                    none;
         --warning--border-color:                        #ffe205;
+
+
+        --create--color:                                #00A60E;
+        --create--background-color:                     #2d2d2d;
+        --delete--color:                                #d10c00;
+        --delete--background-color:                     #2d2d2d;
 
     }
 
